--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 	
 		<script type="text/javascript">
 		if (typeof jQuery == 'undefined') {
-		    document.write(unescape("%3Cscript src='../src/lib/jquery.1.9.1.min.js' type='text/javascript'%3E%3C/script%3E"));
+		    document.write(unescape("%3Cscript src='js/lib/jquery.1.9.1.min.js' type='text/javascript'%3E%3C/script%3E"));
 		}
 		</script>
 		
-		<script src="../src/plugins/characterCountdown.js"></script>
+		<script src="js/plugins/characterCountdown.min.js"></script>
 		
 		<script>
 		
