--- a/demo/index.html
+++ b/demo/index.html
@@ -16,21 +16,21 @@
 	
 	<style>
 	
-		/* for presentaiton only */
+		/* for presentation only */
 	
 		body {
 			font: 16px Arial, Helvetica, sans-serif;
 			margin: 5%;
 		}
 	
-		#countdown {
+		.countdown {
 			background: whitesmoke;
 			margin: 20px 0 0 0;
 			padding: 10px 30px;
 			display: inline-block;
 		}
 		
-		#countdown.max {
+		.countdown.max {
 			background: firebrick;
 			color: white;
 		}
@@ -43,6 +43,7 @@
 			max-width: 400px;
 			height: 100px;
 			color: dimgrey;
+			display: block;
 		}
 	
 	</style>
@@ -54,11 +55,11 @@
 		<form>
 		
 			<textarea></textarea>
+			
+			<div class="countdown"></div>
 		
 		</form>
-		
-		<div id="countdown"></div>
-		
+
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	
 		<script type="text/javascript">
@@ -73,9 +74,7 @@
 		
 			$(function() {
 	
-				$('textarea').characterCountdown({
-					maxChars: 300
-				});
+				$('textarea').characterCountdown();
 				
 			});
 		
